Update travis para testar com newman

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,7 @@ install:
 
 script:
 - mvn test
+- java -jar ./target/cacau-api-0.0.1.jar 
+- node_modules/.bin/newman run postman/cacau.postman_collection.json -e tests/cacau.postman_environment.json
 
 services: mongodb
