--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 
 script:
 - mvn test
-- node_modules/.bin/newman run postman/cacau.postman_collection.json -e postman/cacau.postman_environment.json
+- java -jar ./target/cacau-api-0.0.1.jar & node_modules/.bin/newman run postman/cacau-newman.postman_collection.json -e postman/cacau.postman_environment.json
 
 services: mongodb
 
